force-app/main/default/objects/nFORCE__Feature_Dependency__mdt/nFORCE__Feature_Dependency__mdt.object-meta.xml
<CustomObject>
    <description>The object defines dependencies that exists between features.</description>
    <label>Feature Dependency</label>
    <pluralLabel>Feature Dependencies</pluralLabel>
</CustomObject>