force-app/main/default/objects/nFORCE__Feature_Dependency__mdt/fields/nFORCE__Controlling_Feature__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Controlling_Feature__c</fullName>
    <description>The field indicates the controlling feature on which there is a dependency. It is recommended to use the Controlling Feature Name field instead of this field as it allows for cross package dependencies to be specified.</description>
    <label>Controlling Feature</label>
    <referenceTo>nFORCE__Feature__mdt</referenceTo>
    <relationshipLabel>Controlling Feature Dependencies</relationshipLabel>
    <relationshipName>Controlling_Feature_Dependencies</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>