force-app/main/default/objects/nFORCE__Feature_Dependency__mdt/fields/nFORCE__Controlling_Feature_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Controlling_Feature_Name__c</fullName>
    <description>This field is conditionally required. Either the controlling feature name or the controlling feature lookup field must be specified. The field contains the name of the controlling feature. It is recommend that this field is used instead of the controlling feature field.</description>
    <label>Controlling Feature Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>